# PPTAssistant

./: .gitignore  README.md  README_KR.md  build_exe_on_windows.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.bat
docs/: ROADMAP.md
src/pptassistant/: __init__.py  main.py
src/pptassistant/engine/: __init__.py  fonts.py  notes.py  processor.py  proofing.py
src/pptassistant/gui/: main_window.py
src/pptassistant/profiles/: etri.json
tests/: test_proofing.py
